ensure consistent spacing

--- a/layout.css
+++ b/layout.css
@@ -24,11 +24,15 @@ footer {
 }
 
 .mb-2 {
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.25rem !important;
 }
 
 .mb-3 {
-  margin-bottom: 1rem;
+  margin-bottom: 1rem !important;
+}
+
+.mt-3 {
+  margin-top: 1rem !important;
 }
 
 .mr-auto {
